Fix bad alignement of config button
That flex line might have been useful in its time
But it was nothing but bugs in the now

--- a/src/features/roller/result/Resolve.module.less
+++ b/src/features/roller/result/Resolve.module.less
@@ -3,8 +3,6 @@
 .container {
   max-width: @screen-sm;
   margin: 0 auto;
-  display: flex;
-  flex-direction: column;
 }
 
 .content {
